pkg = import('pkgconfig')

rlib_sources = [
  'ratomic.c',
  'rbase64.c',
  'rbitset.c',
  'rbuffer.c',
  'rclock.c',
  'rcrc.c',
  'rdirtree.c',
  'renv.c',
  'rfd.c',
  'rfile.c',
  'rfs.c',
  'rhashfuncs.c',
  'rhashset.c',
  'rhashtable.c',
  'rhzrptr.c',
  'rlibinit.c',
  'rlog.c',
  'rmath.c',
  'rmemallocator.c',
  'rmem.c',
  'rmemfile.c',
  'rmemscan.c',
  'rmodule.c',
  'rmpint.c',
  'rmpint_montgomery.c',
  'rmsgdigest.c',
  'roptparse.c',
  'rprng-kiss.c',
  'rprng-mt.c',
  'rproc.c',
  'rptrarray.c',
  'rqueuering.c',
  'rrand.c',
  'rref.c',
  'rsignal.c',
  'rsocketaddress.c',
  'rsocket.c',
  'rstr.c',
  'rstring.c',
  'rstrmatch.c',
  'rsys.c',
  'rtaskqueue.c',
  'rtest.c',
  'rthreadpool.c',
  'rthreads.c',
  'rtime.c',
  'rtimeoutcblist.c',
  'rtty.c',
  'runicode.c',
  'ruri.c',
  'asn1/rasn1bin.c',
  'asn1/rasn1binenc.c',
  'asn1/rasn1.c',
  'asn1/rber.c',
  'asn1/rder.c',
  'asn1/roid.c',
  'crypto/raes.c',
  'crypto/rcert.c',
  'crypto/rcipher.c',
  'crypto/rdsa.c',
  'crypto/recc.c',
  'crypto/rhmac.c',
  'crypto/rkey.c',
  'crypto/rpem.c',
  'crypto/rrsa.c',
  'crypto/rsrtpciphersuite.c',
  'crypto/rtlsciphersuite.c',
  'crypto/rx509.c',
  'ev/revloop.c',
  'ev/revresolve.c',
  'ev/revtcp.c',
  'ev/revudp.c',
  'net/proto/rhttp.c',
  'net/proto/rrtcp.c',
  'net/proto/rrtp.c',
  'net/proto/rsdp.c',
  'net/proto/rstun.c',
  'net/proto/rtls.c',
  'net/rhttpserver.c',
  'net/rnet.c',
  'net/rresolve.c',
  'net/rsrtp.c',
  'net/rtlsserver.c',
  'rtc/rrtccryptotransport.c',
  'rtc/rrtcdtlstransport.c',
  'rtc/rrtcicecandidate.c',
  'rtc/rrtcicetransport.c',
  'rtc/rrtcrawtransport.c',
  'rtc/rrtcrtplistener.c',
  'rtc/rrtcrtpparameters.c',
  'rtc/rrtcrtpreceiver.c',
  'rtc/rrtcrtpsender.c',
  'rtc/rrtcrtptransceiver.c',
  'rtc/rrtcsession.c',
  'rtc/rrtcsessiondescription.c',
]

configure_file(input : 'rconfig.h.in', output : 'rconfig.h',
  configuration : rconf,
  install_dir : 'include/rlib')

rlibst = static_library(rlib_name,
  sources : [ rlib_sources ],
  include_directories : inc,
  dependencies : [ libm, libdl, libthread, librt ],
  version : rlib_version,
  c_args : [ '-DRLIB_COMPILATION', '-DRLIB_STLIB' ],
  install : true)

rlibsh = shared_library(rlib_name,
  sources : [ rlib_sources ],
  include_directories : inc,
  dependencies : [ libm, libdl, libthread, librt ],
  version : rlib_version,
  c_args : [ '-DRLIB_COMPILATION', '-DRLIB_SHLIB' ],
  install : true)

pkg.generate(
  name : rlib_name,
  version : rlib_version,
  description : 'Convenience library for useful things.',
  libraries : [ rlibsh, '-ldl' ], # FIXME: Use dependency/find_library
  libraries_private : [ '-lm', '-pthread', '-lrt' ])

