pkg = import('pkgconfig')

rlib_sources = [
  'ratomic.c',
  'rbase64.c',
  'rbuffer.c',
  'rclock.c',
  'rcrc.c',
  'rlibinit.c',
  'rlog.c',
  'rmath.c',
  'rmemallocator.c',
  'rmem.c',
  'rmemfile.c',
  'rmemscan.c',
  'rmodule.c',
  'rmsgdigest.c',
  'roptparse.c',
  'rprng-kiss.c',
  'rprng-mt.c',
  'rrand.c',
  'rref.c',
  'rsocketaddress.c',
  'rsocket.c',
  'rstr.c',
  'rstrmatch.c',
  'rtaskqueue.c',
  'rtest.c',
  'rthreadpool.c',
  'rthreads.c',
  'rtime.c',
  'rtty.c',
  'ruri.c',
  'asn1/rasn1bin.c',
  'asn1/rasn1binenc.c',
  'asn1/rasn1.c',
  'asn1/rber.c',
  'asn1/rder.c',
  'asn1/roid.c',
  'binfmt/relfparser.c',
  'binfmt/rmacho.c',
  'binfmt/rmachoparser.c',
  'binfmt/rpecoff.c',
  'binfmt/rpeparser.c',
  'charset/runicode.c',
  'crypto/raes.c',
  'crypto/rcert.c',
  'crypto/rcipher.c',
  'crypto/rdsa.c',
  'crypto/recc.c',
  'crypto/rhmac.c',
  'crypto/rkey.c',
  'crypto/rpem.c',
  'crypto/rrsa.c',
  'crypto/rsrtpciphersuite.c',
  'crypto/rtlsciphersuite.c',
  'crypto/rx509.c',
  'data/rbitset.c',
  'data/rdirtree.c',
  'data/rhashfuncs.c',
  'data/rhashset.c',
  'data/rhashtable.c',
  'data/rhzrptr.c',
  'data/rmpint.c',
  'data/rmpint_montgomery.c',
  'data/rptrarray.c',
  'data/rqueuering.c',
  'data/rstring.c',
  'data/rtimeoutcblist.c',
  'ev/revloop.c',
  'ev/revresolve.c',
  'ev/revtcp.c',
  'ev/revudp.c',
  'net/proto/rhttp.c',
  'net/proto/rrtcp.c',
  'net/proto/rrtp.c',
  'net/proto/rsdp.c',
  'net/proto/rstun.c',
  'net/proto/rtls.c',
  'net/rhttpserver.c',
  'net/rnet.c',
  'net/rresolve.c',
  'net/rsrtp.c',
  'net/rtlsserver.c',
  'os/renv.c',
  'os/rfd.c',
  'os/rfile.c',
  'os/rfs.c',
  'os/rproc.c',
  'os/rsignal.c',
  'os/rsys.c',
  'rtc/rrtccryptotransport.c',
  'rtc/rrtcdtlstransport.c',
  'rtc/rrtcicecandidate.c',
  'rtc/rrtcicetransport.c',
  'rtc/rrtcrawtransport.c',
  'rtc/rrtcrtplistener.c',
  'rtc/rrtcrtpparameters.c',
  'rtc/rrtcrtpreceiver.c',
  'rtc/rrtcrtpsender.c',
  'rtc/rrtcrtptransceiver.c',
  'rtc/rrtcsession.c',
  'rtc/rrtcsessiondescription.c',
]

configure_file(input : 'rconfig.h.in', output : 'rconfig.h',
  configuration : rconf,
  install_dir : 'include/rlib/types')

rlibst = static_library(rlib_name,
  sources : [ rlib_sources ],
  include_directories : inc,
  dependencies : [ libm, libdl, libthread, librt ],
  version : rlib_version,
  c_args : [ '-DRLIB_COMPILATION', '-DRLIB_STLIB' ],
  install : true)

rlibsh = shared_library(rlib_name,
  sources : [ rlib_sources ],
  include_directories : inc,
  dependencies : [ libm, libdl, libthread, librt ],
  version : rlib_version,
  c_args : [ '-DRLIB_COMPILATION', '-DRLIB_SHLIB' ],
  install : true)

pkg.generate(
  name : rlib_name,
  version : rlib_version,
  description : 'Convenience library for useful things.',
  libraries : [ rlibsh, '-ldl' ], # FIXME: Use dependency/find_library
  libraries_private : [ '-lm', '-pthread', '-lrt' ])

