
rlibtest_sources = [
  'raes.c',
  'rasn1ber.c',
  'rasn1der.c',
  'rasn1enc.c',
  'rasn1oid.c',
  'rargparse.c',
  'rbase64.c',
  'rbitops.c',
  'rbitset.c',
  'rbuffer.c',
  'rcblist.c',
  'rcbqueue.c',
  'rcbrlist.c',
  'rclock.c',
  'rcrc.c',
  'rcryptocert.c',
  'rcryptocipher.c',
  'rcryptohmac.c',
  'rcryptokey.c',
  'rcryptopem.c',
  'rcryptosrtpciphersuite.c',
  'rcryptotlsciphersuite.c',
  'rdictionary.c',
  'rdirtree.c',
  'relf.c',
  'rendianness.c',
  'revloop.c',
  'revtcp.c',
  'revudp.c',
  'rfile.c',
  'rfileio.c',
  'rfs.c',
  'rhashset.c',
  'rhashtable.c',
  'rhttp.c',
  'rhttpserver.c',
  'rhzrptr.c',
  'rjson.c',
  'rjson_parser.c',
  'rkvptrarray.c',
  'rlist.c',
  'rlog.c',
  'rmacho.c',
  'rmemallocator.c',
  'rmem.c',
  'rmemfile.c',
  'rmodule.c',
  'rmpint.c',
  'rmsgdigest.c',
  'rpecoff.c',
  'rprng-kiss.c',
  'rprng-mt.c',
  'rproc.c',
  'rptrarray.c',
  'rqueuelist.c',
  'rqueuering.c',
  'rrand.c',
  'rref.c',
  'rresolve.c',
  'rrsa.c',
  'rrtc.c',
  'rrtcicecandidate.c',
  'rrtcrtpparameters.c',
  'rrtcsessiondescription.c',
  'rrtp.c',
  'rsdp.c',
  'rslist.c',
  'rsocketaddress.c',
  'rsocket.c',
  'rsrtp.c',
  'rstr.c',
  'rstring.c',
  'rstun.c',
  'rsys.c',
  'rtaskqueue.c',
  'rtest.c',
  'rthread.c',
  'rthreadpool.c',
  'rtime.c',
  'rtimeoutcblist.c',
  'rtls.c',
  'rtlsserver.c',
  'runicode.c',
  'ruri.c',
]

rlibtest = executable('rlibtest',
  sources : rlibtest_sources,
  include_directories : inc,
  dependencies : [ libm, libdl, libthread, librt ],
  link_with : librlib,
  install : false)

test('rlib test', rlibtest)

